# libemc2101-python

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-config_dev.json  CHANGELOG.md  README.md  TODO.md  pdm.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run_pytest.sh  scratchpad.py  tox.ini
.copier/: answers_pypackage.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post_create.sh
.github/: CODEOWNERS  dependabot.yaml  release-please.yml
.github/workflows/: build-and-upload.yaml  coveralls.yaml  release-please.yaml  validate-code.yaml
docs/: CONTRIBUTING.md  discoveries.md  using-pdm.md
examples/: calibrate_pwm_fan.py
feeph/emc2101/: __init__.py  calibration.py  config_register.py  core.py  emc2101_core.py  emc2101_pwm.py  ets_config.py  fan_configs.py  pwm.py  utilities.py
feeph/emc2101/scs/: __init__.py  base_class.py  dac.py  pwm.py
scripts/: calibrate_pwm_fan.py  prepare_repository  run_tests  update_copier-templates  update_dependencies  verify_commits-are-signed
src/: scratchpad.py
src/i2c/: i2c_device.py
src/i2c/emc2101/: __init__.py  conversions.py  emc2101_core.py  emc2101_pwm.py  fan_configs.py
src/i2c/emc2101/scs/: __init__.py  base_class.py  dac.py  pwm.py
tests/: TESTING.md  test_calibration.py  test_config_register.py  test_conversions.py  test_emc2101.py  test_emc2101_core.py  test_emc2101_ets.py  test_emc2101_its.py  test_emc2101_lut.py  test_emc2101_pwm.py  test_emc2101pwm.py  test_fanconfig.py  test_mocked_device.py  test_physical_device.py  test_scs_baseclass.py  test_scs_dac.py  test_scs_pwm.py  test_utilities.py
