# line lengths:
#   - Excessive line lengths aren't good. But rather then automatically
#     breaking them and turning into vertical blocks we want to see the
#     nastiness sticking out prominently.
#
# black:
#   - If the question is "Black?" the answer is "No!"
#   - We use autopep8 to confirm compliance with PEP8, going beyond that
#     is not necessary. If you want to apply black, then fine, go ahead.
#     But we're not going to enforce or encourage it.

[project]
name = "libi2c-emc2101-python"
version = "0.1.3"
description = "library for EMC2101 fan control chip"
authors = [
    {name = "Feeph Aifeimei", email = "55798703+feeph@users.noreply.github.com"},
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "adafruit-board-toolkit>=1.1.0",
    "adafruit-circuitpython-busdevice>=5.2.0,<6.0.0",
    "feeph-i2c>=0.4.0,<1.0.0",
    "gpiod>=2.1.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
#homepage =
repository = "https://github.com/feeph/libi2c-emc2101-python/"
keywords = [
    "emc2101",
    "i2c",
    "smbus",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# -------------------------------------------------------------------------
# tooling
# -------------------------------------------------------------------------

# https://github.com/PyCQA/isort
# https://pycqa.github.io/isort/
[tool.isort]
# use the black profile but override "multi_line_output"
profile           = "black"
line_length       = 250
multi_line_output = 7
src_paths         = ["src", "tests"]

# https://pypi.org/project/autopep8/
[tool.autopep8]
max_line_length = 250
ignore          = ["E221", "E241"]
in-place = true

[tool.pdm]
distribution = true

# automatically update requirements.txt on `pdm lock`
[[tool.pdm.autoexport]]
filename = "requirements.txt"
groups = ["default", "test"]

[tool.pdm.dev-dependencies]
test = [
    "autopep8     ~= 2.2",
    "flake8       ~= 7.0",
    "mypy         ~= 1.10",
    "pytest-cov   ~= 5.0",
    "pytest-sugar ~= 1.0",
    "types-PyYAML>=6.0.12.20240311",
]
tox = []
dev = [
]
tests = []

[[tool.pdm.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
include_packages = ["feeph-i2c"]
